base-infra/gwc-shared.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: GatewayClass
metadata:
  name: eg-shared
spec:
  controllerName: gateway.envoyproxy.io/shared-gatewayclass-controller
