base-infra/gwc-tenant-a.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: GatewayClass
metadata:
  name: eg-tenant-a
spec:
  controllerName: gateway.envoyproxy.io/tenant-a-gatewayclass-controller
